First stab at the bug list. Mainly homepage amends based around spacing and font sizes, for now.

--- a/css/main.scss
+++ b/css/main.scss
@@ -48,7 +48,7 @@ $burgandy: #611529;
 
 $GothamBoldStack: GothamBold, Arial, serif;
 $GothamMediumStack: GothamMedium, Arial, serif;
-$NunitoStack: "Nunito", Arial, sans-serif;
+$GothamBookStack: GothamBook, Arial, serif;
 
 $sixteen: 1em;              /* 16px */
 $twelve: 0.750em;           /* 12px: 1 / (16x12) = 0.750 */
@@ -59,6 +59,7 @@ $twenty-six: 1.625em;       /* 26px: 1 / (16x26) = 1.625 */
 $thirty-four: 2.125em;      /* 34px: 1 / (16x34) = 2.215 */
 $fifty-seven: 3.375em;      /* 57px: 1 / (16x57) = 3.375 */
 $seventy: 4.375em;          /* 70px: 1 / (16x70) = 4.375 */
+$eightyfive: 5.3125em;      /* 85px: 1 / (16x85) =  5.3125 */
 
 
 
@@ -85,6 +86,17 @@ $seventy: 4.375em;          /* 70px: 1 / (16x70) = 4.375 */
         url("../fonts/gotham-medium-webfont.woff") format("woff"),
         url("../fonts/gotham-medium-webfont.ttf") format("truetype"),
         url("../fonts/gotham-medium-webfont.svg#webfont") format("svg");
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: GothamBook;
+    src: url("../fonts/gotham-book-webfont.eot");
+    src: local("?"),
+        url("../fonts/gotham-book-webfont.woff") format("woff"),
+        url("../fonts/gotham-book-webfont.ttf") format("truetype"),
+        url("../fonts/gotham-book-webfont.svg#webfont") format("svg");
     font-weight: normal;
     font-style: normal;
 }
@@ -228,9 +240,17 @@ h6 {
     }
 
 h1, .h1 {
-    font-size: 2em;
+    margin-bottom: 0;
+    color: #fff;
+    font-size: $seventy;
     line-height: 1;
-    margin-bottom: .5em;
+    text-transform: uppercase;
+    letter-spacing: -5px;
+
+    @include breakpoint(small) {
+        font-size: 2.5em;
+    }   
+
 }
 
 h2, .h2 {
@@ -267,7 +287,7 @@ p {
     font-size: 1em;
     margin-bottom: 1em;
     line-height: 1.5;
-    font-family: $NunitoStack;
+    font-family: $GothamBookStack;
 }
 
 b, strong {
@@ -1004,6 +1024,15 @@ textarea {
 
 }
 
+.carousel--match {
+    height: 585px;
+
+    h1 {
+        font-size: $eightyfive;
+    }
+
+}
+
 .panel__image {
     display: block;
     margin: 0 auto;
@@ -1191,40 +1220,26 @@ textarea {
         padding: 1.5em;
     }
 
-    h1 {
-        margin-bottom: 0;
-        text-transform: uppercase;
-        color: #fff;
-        line-height: 1;
-        letter-spacing: -5px;
-        font-size: $seventy;
-
-        @include breakpoint(small) {
-            font-size: 2.5em;
-        }
-
+    .vs {
+        display: inline-block;
+        width: 45px;
+        height: 45px;
+        margin-left: 0.3em;
+        background-color: transparent;
+        background-position: 0 0;
+        background-repeat: no-repeat;
+        background-image: url(../images/vs.png);
     }
 
-        .vs {
-            display: inline-block;
-            width: 45px;
-            height: 45px;
-            margin-left: 0.3em;
-            background-color: transparent;
-            background-position: 0 0;
-            background-repeat: no-repeat;
-            background-image: url(../images/vs.png);
-        }
+    .match__team {
+        display: block;
+        float: left;
+        clear: left;
+    }
 
-        .match__team {
-            display: block;
-            float: left;
-            clear: left;
-        }
-
-        .match__points {
-            color: #7589ab;
-        }
+    .match__points {
+        color: #7589ab;
+    }
 
 .stats {
     float: left;
@@ -1358,7 +1373,7 @@ textarea {
 
     .inner {
         padding-top: 2.5em;
-        padding-bottom: 0;
+        padding-bottom: 2.5em;
 
         @include breakpoint(small) {
             padding: 0.5em;
@@ -1523,7 +1538,7 @@ textarea {
     clear: left;
     width: 100%;
     padding: 0.5em;
-    color: #D6D6D6;
+    color: #A7A7A7;
     font-size: $thirty-four;
     font-family: $GothamBoldStack;
     text-transform: uppercase;
@@ -1595,7 +1610,7 @@ textarea {
     $Advert
 \*------------------------------------*/
 .team {
-    padding-bottom: 1.5em;
+    padding-bottom: 2.5em;
     border-left: 10px solid #D6D6D6;
     border-right: 10px solid #D6D6D6;
     background-color: transparent;
@@ -1610,7 +1625,7 @@ textarea {
 }
 
 .advert {
-    padding: 1em;
+    padding: 1.5em;
 }
 
 .advert__image {
@@ -1629,6 +1644,7 @@ textarea {
 .player-profile {
     margin: 0 auto;
     max-width: 940px;
+    min-height: 450px;
     border: 8px solid #fff;
 
     .quarter {
@@ -2127,17 +2143,21 @@ textarea {
     background-position: 0 0;
     background-repeat: no-repeat;
     background-image: url(../images/social-bg.png);
+
+    .inner {
+        padding-bottom: 1em;
+    }
 }
 
 .social__channel {
     @extend .full;
-    margin-bottom: 1em;
+    margin-bottom: 1.5em;
 }
 
 .social__text {
     float: left;
     position: relative;
-    padding: 1em;
+    padding: 0.8em;
     text-transform: uppercase;
     color: #becae0;
     background-color: #61779f;
@@ -2163,8 +2183,9 @@ textarea {
 
 .social__quote {
     line-height: 1;
+    letter-spacing: -3px;
     font-family: $GothamMediumStack;
-    font-size: $twenty-six;
+    font-size: $thirty-four;
 }
 
 .social__facebook-twitter {
